
genrule(
    name = "a_1",
    outs = ["1.txt"],
    output_to_bindir = 1,
    cmd = """#!/bin/bash
echo "example a" >> $@
"""
)

genrule(
    name = "a_2",
    srcs = [":a_1"],
    outs = ["a_2.txt"],
    output_to_bindir = 1,
    cmd = """#!/bin/bash
cat $< >> $@
cat $< >> $@
"""
)


load(":rules.bzl", "b_executable", "b")

b_executable(
    name = "my_super_tool",
)

b(
    name = "b",
    content = "some content",
    some_my_tool = ":my_super_tool",
)
